# BV_Praktikum

BV_Praktikum/: BV_Praktikum.sln
BV_Praktikum/BV_Praktikum1/: BV_Praktikum1.vcxproj  CMakeLists.txt  Quelle.cpp
